hw6-mistakes-upd

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
         <label for="accept" class="form-checkbox">
           <p class="checkbox-text">Соглашаюсь с рассылкой и принимаю
-            <a href="">Условия договора</a>
+            <a class="checkbox-text-link" href="">Условия договора</a>
           </p>
           <input class="check" type="checkbox" id="accept">
           <span class="outer-checkbox"></span>
